# LoanGuard-AI

./: .gitattributes  .gitignore  DEPLOY.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: loan_dataset.csv
models/: decision_tree.pkl  feature_cols.pkl  logistic_regression.pkl  scaler.pkl
scripts/: generate_data.py  train_model.py
src/loanguard/: __init__.py
src/loanguard/apps/: __init__.py  app.py
src/loanguard/core/: __init__.py  analytics.py  explain.py  fairness_enhanced.py  fraud_detection.py  model.py  preprocessing.py  risk.py  utils.py
