[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loanguard-ai"
version = "1.0.0"
description = "Loan eligibility decision support with explainability, fraud detection, and fairness monitoring"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.32.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "plotly>=5.18.0",
  "matplotlib>=3.7.0",
  "seaborn>=0.12.0",
  "joblib>=1.3.0",
  "graphviz>=0.20.0"
]

[tool.setuptools.packages.find]
where = ["src"]
